[gd_scene load_steps=5 format=3 uid="uid://ccr6w74emikr1"]

[ext_resource type="Script" uid="uid://bq2r5bvt7u84p" path="res://scripts/menus/partida_ia_ia_menu.gd" id="1_xh63d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrkxu"]
bg_color = Color(0.94902, 0.929412, 0.854902, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_78ukb"]
resource_name = "IA1_dificuldade"

[sub_resource type="ButtonGroup" id="ButtonGroup_hjnmx"]
resource_name = "IA2_dificuldade"

[node name="Window" type="Window"]
initial_position = 2
size = Vector2i(400, 250)
script = ExtResource("1_xh63d")

[node name="PartidaIA2Menu" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rrkxu")

[node name="MarginContainer" type="MarginContainer" parent="PartidaIA2Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PartidaIA2Menu/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PartidaIA2Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Dificuldade IA:"
horizontal_alignment = 1

[node name="IA_0" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_78ukb")
text = "Aleatório"

[node name="IA_1" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_78ukb")
text = "Fácil
"

[node name="IA_2" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_78ukb")
text = "Médio
"

[node name="IA_3" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_78ukb")
text = "Difícil"

[node name="VBoxContainer2" type="VBoxContainer" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Dificuldade IA2:"
horizontal_alignment = 1

[node name="IA2_0" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_group = SubResource("ButtonGroup_hjnmx")
text = "Aleatório"

[node name="IA2_1" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_hjnmx")
text = "Fácil"

[node name="IA2_2" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_group = SubResource("ButtonGroup_hjnmx")
text = "Médio
"

[node name="IA2_3" type="CheckButton" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_group = SubResource("ButtonGroup_hjnmx")
text = "Difícil"

[node name="VSpace" type="Control" parent="PartidaIA2Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PartidaIA2Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Quantidade de Partidas:"

[node name="LabelNumPartidas" type="LineEdit" parent="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
alignment = 2

[node name="VSpace2" type="Control" parent="PartidaIA2Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartGameIaIa" type="Button" parent="PartidaIA2Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Menus"
text = "Start Game"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/IA_0" to="." method="_on_ia_0_pressed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/IA_1" to="." method="_on_ia_1_pressed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/IA_2" to="." method="_on_ia_2_pressed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/IA_3" to="." method="_on_ia_3_pressed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/IA2_0" to="." method="_on_ia_2_0_pressed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/IA2_1" to="." method="_on_ia_2_1_pressed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/IA2_2" to="." method="_on_ia_2_2_pressed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/IA2_3" to="." method="_on_ia_2_3_pressed"]
[connection signal="text_changed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/HBoxContainer2/LabelNumPartidas" to="." method="_on_label_num_partidas_text_changed"]
[connection signal="pressed" from="PartidaIA2Menu/MarginContainer/VBoxContainer/StartGameIaIa" to="." method="_on_start_game_ia_ia_pressed"]
